Fixed user comments' text not showing correctly on user profile. Now comments and issues showed in a user profile link to their corresponding issue. Minor fixes and improvements.

--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,6 +1,6 @@
 .user-container {
     padding: 1em;
-    
+
     .user-main {
         display: flex;
         flex-direction: column;
@@ -26,21 +26,33 @@
 
     .mat-tab-group {
         .mat-card {
+            margin: 1em 0;
+            padding: 0 0 0.3em 0; // padding bottom
+
             .mat-card-title {
                 font-size: 1.2em;
+                padding-left: 0.9em;
+                padding-top: 1em;
             }
-            margin: 1em 0;
+
+            .mat-card-content {
+                margin: 0.8em 1em;
+                font-size: 0.9em;
+            }
+        }
+
+        .issue-card {
+            cursor: pointer;
         }
     }
 }
 
 @media (min-width: 960px) {
     .user-container {
-
         .user-main {
             flex-direction: row;
             justify-content: flex-start;
-            
+
             .img-container {
                 width: 200px;
                 margin: 2em 3em;
